--- a/Src/Hashlib.NET/Hashlib.NET.csproj
+++ b/Src/Hashlib.NET/Hashlib.NET.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="4.0.0-beta0014">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+  
 </Project>
