--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Checksum\Adler32Tests.cs" />
+    <Compile Include="Checksum\FletcherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
