Added Crc32 crc algorithm based on the default zlib implementation.

--- a/Src/Hashlib.NET/Hashlib.NET.csproj
+++ b/Src/Hashlib.NET/Hashlib.NET.csproj
@@ -13,5 +13,11 @@
     </PackageReference>
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <Folder Include="Checksum\" />
+    <Folder Include="Common\" />
+    <Folder Include="Crc\" />
+  </ItemGroup>
+
 </Project>
