--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Checksum\Adler32Tests.cs" />
     <Compile Include="Checksum\FletcherTests.cs" />
+    <Compile Include="Crc\Crc32Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
