Added non-cryptographic ELF32 hash algorithm and tests.

--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="NonCryptographic\BkdrTests.cs" />
     <Compile Include="NonCryptographic\DekTests.cs" />
     <Compile Include="NonCryptographic\Djb2Tests.cs" />
+    <Compile Include="NonCryptographic\Elf32Tests.cs" />
     <Compile Include="NonCryptographic\Fnv1aTests.cs" />
     <Compile Include="NonCryptographic\Fnv1Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
