Added non-cryptographic RS hash algorithm and tests.

--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="NonCryptographic\JoaatTests.cs" />
     <Compile Include="NonCryptographic\JsTests.cs" />
     <Compile Include="NonCryptographic\Pjw32Tests.cs" />
+    <Compile Include="NonCryptographic\RsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
