--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="NonCryptographic\JsTests.cs" />
     <Compile Include="NonCryptographic\Pjw32Tests.cs" />
     <Compile Include="NonCryptographic\RsTests.cs" />
+    <Compile Include="NonCryptographic\SaxTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
