--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="NonCryptographic\SaxTests.cs" />
     <Compile Include="NonCryptographic\SdbmTests.cs" />
     <Compile Include="NonCryptographic\SuperFastTests.cs" />
+    <Compile Include="NonCryptographic\XxHash32Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
