Added non-cryptographic XxHash64 hash algorithm and tests.

--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="NonCryptographic\SdbmTests.cs" />
     <Compile Include="NonCryptographic\SuperFastTests.cs" />
     <Compile Include="NonCryptographic\XxHash32Tests.cs" />
+    <Compile Include="NonCryptographic\XxHash64Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
