Added cryptographic MD5 hash algorithm and tests. Added support utilities to testing for converting to and from hex strings and bytes.

--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -61,8 +61,10 @@
   <ItemGroup>
     <Compile Include="Checksum\Adler32Tests.cs" />
     <Compile Include="Checksum\FletcherTests.cs" />
+    <Compile Include="Common\Utils.cs" />
     <Compile Include="Crc\Crc32Tests.cs" />
     <Compile Include="Crc\Crc64Tests.cs" />
+    <Compile Include="Cryptographic\MD5Tests.cs" />
     <Compile Include="NonCryptographic\ApTests.cs" />
     <Compile Include="NonCryptographic\BkdrTests.cs" />
     <Compile Include="NonCryptographic\DekTests.cs" />
