Added cryptographic SHA1 hash algorithm and tests.

--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Crc\Crc32Tests.cs" />
     <Compile Include="Crc\Crc64Tests.cs" />
     <Compile Include="Cryptographic\MD5Tests.cs" />
+    <Compile Include="Cryptographic\SHA1Tests.cs" />
     <Compile Include="NonCryptographic\ApTests.cs" />
     <Compile Include="NonCryptographic\BkdrTests.cs" />
     <Compile Include="NonCryptographic\DekTests.cs" />
