--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Common\Utils.cs" />
     <Compile Include="Crc\Crc32Tests.cs" />
     <Compile Include="Crc\Crc64Tests.cs" />
+    <Compile Include="Cryptographic\KeccakTests.cs" />
     <Compile Include="Cryptographic\MD5Tests.cs" />
     <Compile Include="Cryptographic\SHA1Tests.cs" />
     <Compile Include="Cryptographic\SHA224Tests.cs" />
