--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Cryptographic\SHA224Tests.cs" />
     <Compile Include="Cryptographic\SHA256Tests.cs" />
     <Compile Include="Cryptographic\SHA3Tests.cs" />
+    <Compile Include="Cryptographic\SHA512Tests.cs" />
     <Compile Include="NonCryptographic\ApTests.cs" />
     <Compile Include="NonCryptographic\BkdrTests.cs" />
     <Compile Include="NonCryptographic\DekTests.cs" />
