--- a/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
+++ b/Src/Hashlib.NET.Tests/Hashlib.NET.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Cryptographic\SHA1Tests.cs" />
     <Compile Include="Cryptographic\SHA224Tests.cs" />
     <Compile Include="Cryptographic\SHA256Tests.cs" />
+    <Compile Include="Cryptographic\SHA384Tests.cs" />
     <Compile Include="Cryptographic\SHA3Tests.cs" />
     <Compile Include="Cryptographic\SHA512Tests.cs" />
     <Compile Include="NonCryptographic\ApTests.cs" />
